2003-09-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lily-guile.cc (parse_symbol_list): strip spaces at the end.

	* Documentation/topdocs/INSTALL.texi (Top): reorder.

	* scripts/convert-ly.py (conv): add up-to-staff conversion rule.

	* lily/include/directional-element-interface.hh:
	junk class, make {get,set}_grob_direction functions.

	* lily/slur.cc (get_attachment): do something sensible when
	attaching to stem without heads (eg. a rest).

	* lily/stem.cc: remove #'up-to-staff ; use #'stem-end-position for
	forcing up to staff.  remove #'support-head property
	(brew_molecule): small cleanup.
	(flag): remove #'grace property.

2003-09-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/postinstall-lilypond.sh: 
	* cygwin/postremove-lilypond.sh: Bugfix for fonts remove command
	(Volker Zell).

2003-09-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py: resurrect 'eps' option. 
	(TexiPaper.to_eps): use -Ppdf for EPS files.

	* VERSION (PATCH_LEVEL): branch off 2.0, go to 2.1 in HEAD

	* scripts/lilypond.py (run_dvips): use -Ppdf for preview.

	* VERSION: release 2.0.1

	* lily/bezier.cc (get_other_coordinate): change assert into
	warning.

	* lily/note-head.cc (internal_brew_molecule): make left protusion
	smaller, to accomodate for natural sign.
	(internal_brew_molecule): only do this when the accidental is
	close enough.
	(extent): new function

	* lily/skyline.cc (merge_skyline): new function
	(heighten_skyline): new function

	* lily/accidental-placement.cc (position_accidentals) 
	(position_accidentals): fix todo.

2003-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/+.ly (texidoc): put version number inline.

	* GNUmakefile.in: remove rsync-web target.
	
	* input/regression/bar-scripts.ly (onestaff): raggedright

2003-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc: remove #if 0'd code in couple of places.

	* lily/midi-stream.cc (operator <<): rewrite.

	* lily/note-head.cc (internal_brew_molecule): 